SAN-395: Fix icon alignment
Icons should align to the baseline of the text. If the icon is supposed
to be used without text, some other alignment will have to be enforced.

--- a/templates/styles.css
+++ b/templates/styles.css
@@ -10,7 +10,6 @@
 
 .icon:before {
   display: inline-block;
-  vertical-align: middle;
   font-family: '<%= fontName %>';
   font-size: inherit;
   font-style: normal;
